# physical_ai_tools

./: .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  MERGE_SUMMARY.md  QUICKSTART.md  REPLAY_REFACTORING_PROGRESS.md  SYSTEM_ARCHITECTURE.md  groot_inference_plan.md
.cursor/rules/: react-best-practices.mdc
docker/: .dockerignore  Dockerfile.physical_ai_server  container.sh  docker-compose.yml  docker-compose.yml.orig  setup_groot_deps.sh
docker/s6-services/common/: ros2_service_finish.sh  ros2_service_run.sh
docker/s6-services/physical_ai_server-log-prepare/: up
docs/: BUILD_TROUBLESHOOTING.md  DOCKER_ARCHITECTURE.md  PLAN_lerobot_act_inference.md  PLAN_robotclient_integration.md
docs/design/: robot_client_design.md
docs/plans/: 2026-02-28-inference-page-revamp.md  2026-03-02-robot-3d-visualization.md
install/: local_setup.sh  setup.sh
log/: latest_build
physical_ai_bt/: CHANGELOG.rst  package.xml  setup.py
physical_ai_bt/bt_bringup/launch/: bt_node.launch.py
physical_ai_bt/bt_bringup/params/: bt_node_params.yaml
physical_ai_bt/launch/: bt_node.launch.py
physical_ai_bt/physical_ai_bt/: __init__.py  blackboard.py  bt_core.py  bt_node.py  bt_nodes_loader.py  constants.py  tree_builder.py  xml_loader.py
physical_ai_bt/physical_ai_bt/actions/: __init__.py  base_action.py  camera_depth.py  control_inference.py  control_publish_action.py  inference.py  inference_action.py  inference_until_gesture.py  inference_until_gesture_with_gripper.py  inference_until_gripper.py  inference_until_position.py  inference_until_position_with_gripper.py  move_arms.py  move_head.py  move_head_lift.py  move_lift.py  open_grippers.py  rotate.py  rotate_lidar.py  rule_action.py  rule_arms.py  rule_head_lift.py  rule_swerve.py  rule_whole_body.py  send_command.py  send_language_instruction.py  set_task_instruction.py  timed_inference.py  update_task_instruction.py  wait.py
physical_ai_bt/physical_ai_bt/controls/: __init__.py  fallback.py  for_each.py  loop.py  recovery.py  retry_until_successful.py  sequence.py
physical_ai_bt/trees/: ffw_sg2_rev1.xml  ffw_test.xml  ffw_test_2.xml  korea_mat.xml  omx_test.xml  omx_test_2.xml  robot_control_tree.xml  test_gesture_gripper_action.xml  test_gripper_action.xml
physical_ai_interfaces/: CHANGELOG.rst  CMakeLists.txt  FEATURES.md  package.xml
physical_ai_interfaces/msg/: DatasetInfo.msg  HFOperationStatus.msg  TaskInfo.msg  TaskStatus.msg  TrainingInfo.msg  TrainingProgress.msg
physical_ai_interfaces/srv/: CheckpointList.srv  ControlActionPublish.srv  ControlHfServer.srv  ControlInference.srv  EditDataset.srv  GetActionChunk.srv  GetDatasetEditInfo.srv  GetReplayData.srv  GetTrainingInfo.srv  HFEndpointList.srv  LoadAndRunTree.srv  ModelList.srv  PolicyList.srv  SelectHFEndpoint.srv  SendCommand.srv  SendTrainingCommand.srv  SetDatasetEditInfo.srv  SetHFUser.srv  StartInference.srv  StopTraining.srv  TrainModel.srv  TrainingStatus.srv
physical_ai_manager/: CHANGELOG.rst  Dockerfile  FEATURES.md  nginx.conf  package-lock.json  package.json
physical_ai_manager/src/: App.js
physical_ai_manager/src/components/: CheckpointSelector.js  ControlPanel.js  DatasetDownloadModal.js  DatasetSelector.js  EpisodeStatus.js  FileBrowser.js  FileBrowserDemo.js  FileBrowserModal.js  FullTaskStatus.js  (+18 more)
physical_ai_server/: CHANGELOG.rst  Dockerfile.amd64  Dockerfile.arm64  package.xml  setup.py
physical_ai_server/config/: ffw_bg2_rev4_config.yaml  ffw_bg2_rev4_custom_config.yaml  ffw_sg2_rev1_config.yaml  frontier_omy_f3m_config.yaml  omx_f_config.yaml  omy_f3m_3cam_config.yaml  omy_f3m_config.yaml
physical_ai_server/docs/: ROSBAG_TO_LEROBOT_DATA_SYNC.md  ROSBAG_TO_LEROBOT_TEST_GUIDE.md
physical_ai_server/launch/: image_rotator.launch.py  physical_ai_server.launch.py  physical_ai_server_bringup.launch.py
physical_ai_server/physical_ai_server/: image_rotator_node.py  physical_ai_server.py
physical_ai_server/scripts/: convert_rosbag_to_lerobot.py  rosbag_image_to_mp4_converter.py  test_rosbridge_connection.py  validate_lerobot_dataset.py  visualize_rosbag.py
physical_ai_server/test/: test_zenoh_communication.py
physical_ai_server/tests/: __init__.py
physical_ai_tools/: CHANGELOG.rst  package.xml
rosbag_recorder/: CHANGELOG.rst  CMakeLists.txt  DOCKER_BUILD.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  README.md  package.xml
rosbag_recorder/config/: recorder_config.yaml
rosbag_recorder/include/rosbag_recorder/: image_bag_recorder.hpp  image_compressor.hpp  joint_states_recorder.hpp  service_bag_recorder.hpp
rosbag_recorder/launch/: image_bag_recorder.launch.py
rosbag_recorder/msg/: ImageMetadata.msg  RecordingMonitor.msg
rosbag_recorder/scripts/: test_recorder.sh
rosbag_recorder/src/: image_bag_recorder.cpp  image_compressor.cpp  joint_states_bag_reader.cpp  joint_states_recorder.cpp  service_bag_recorder.cpp
rosbag_recorder/srv/: SetRecordConfig.srv
rosbag_recorder_demo/: package.xml  setup.cfg  setup.py
rosbag_recorder_demo/rosbag_recorder_demo/: web_service_node.py
rosbag_recorder_msgs/: CMakeLists.txt  package.xml
rosbag_recorder_msgs/srv/: StartRecording.srv  StopAndDeleteRecording.srv  StopRecording.srv
rosbag_to_lerobot/: README.md  package.xml  setup.py
rosbag_to_lerobot/config/: ffw_arm_only_config.yaml  ffw_bg2_rev4_config.yaml  ffw_sg2_rev1_config.yaml  multi_directory_example.yaml  omx_config.yaml
rosbag_to_lerobot/launch/: converter.launch.py
rosbag_to_lerobot/rosbag_to_lerobot/: rosbag_converter_node.py  rosbag_reader.py
scripts/: remove_head_lift_joints.py  update_lerobot.sh
test_utils/: CMakeLists.txt  package.xml
test_utils/launch/: hdf5_publisher.launch.py  mock_publisher.launch.py
test_utils/test_utils/: __init__.py  hdf5_topic_publisher.py  mock_topic_publisher.py
tests/: test_checkpoint_management.py  test_inference_pipeline.py  test_lerobot_docker_integration.py  test_training_log_publish.py
(+717 files in other folders)
